--- a/notebooks/01_google_data_parser.ipynb
+++ b/notebooks/01_google_data_parser.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4ba45c2",
+   "id": "fe3e778a",
    "metadata": {},
    "source": [
     "## Data format description\n",
@@ -110,8 +110,10 @@
     "                    current_trip[\"waypoints_list\"].append(prep_points) \n",
     "            elif \"transitPath\" in trip_a:\n",
     "                current_trip[\"waypoints_list\"] = trip_a[\"transitPath\"][\"transitStops\"]\n",
-    "                \n",
-    "            prepared_data_list.append(current_trip)\n",
+    "            \n",
+    "            if \"UNKNOWN_ACTIVITY_TYPE\" != current_trip[\"activity_type\"]:\n",
+    "                # unknown activities will be thrown out\n",
+    "                prepared_data_list.append(current_trip)\n",
     "            # else: current_trip[\"waypoints_list\"] = None\n",
     "            # print(f\"Type of activity: {current_trip['activity_type']}, Trip duration {current_trip['duration']} seconds\")\n",
     "        else: # \"placeVisit\" in trip:\n",
@@ -124,7 +126,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "903412d0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -151,14 +155,26 @@
     "data_path = \"./data/google_trips/\"\n",
     "all_trip_files = [file for file in os.listdir(data_path) if not file.startswith(\".\")]\n",
     "\n",
-    "combined_month_data = []\n",
+    "combined_month_data = {}\n",
     "for file in all_trip_files:\n",
     "    user_name = file.split(\"_\")[0]\n",
     "    full_file_path = f\"{data_path}{file}\" \n",
+    "    file_name_pretty = \"_\".join(file.split(\"_\")[1:])\n",
     "    print(f\"Reading file {full_file_path} for user '{user_name}' ...\")\n",
     "    \n",
-    "    ith_file = {user_name: parse_trip_file(full_file_path)}\n",
-    "    combined_month_data.append(ith_file)"
+    "    month_file_data = parse_trip_file(full_file_path)\n",
+    "    if user_name in combined_month_data:\n",
+    "        combined_month_data[user_name][file_name_pretty] = {\n",
+    "                       \"raw\": month_file_data,\n",
+    "                       \"features\": {} \n",
+    "                    }\n",
+    "    else:\n",
+    "        combined_month_data[user_name] = {\n",
+    "            file_name_pretty: \n",
+    "                    {\n",
+    "                       \"raw\": month_file_data,\n",
+    "                       \"features\": {} \n",
+    "                    }}"
    ]
   },
   {
@@ -171,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In total there are 7 user files with trips\n",
+      "In total there are 3 user files with trips\n",
       "Saved to file\n"
      ]
     }
@@ -186,8 +202,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "471596b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to check which activities are in the dataset\n",
+    "\"\"\"\n",
+    "types_ = set()\n",
+    "for file in combined_month_data:\n",
+    "    tmp = list(file.keys())[0]\n",
+    "\n",
+    "    for i in file[tmp]:\n",
+    "        # print(i[\"activity_type\"])\n",
+    "        types_.add(i[\"activity_type\"])\n",
+    "        if \"UNKNOWN_ACTIVITY_TYPE\" == i[\"activity_type\"]:\n",
+    "            print(current_trip[\"activity_type\"])\n",
+    "types_\n",
+    "\"\"\";"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "91f7f070",
+   "id": "9fa47e57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -195,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e7ea752",
+   "id": "db247679",
    "metadata": {},
    "outputs": [],
    "source": []
