--- a/notebooks/01_google_data_parser.ipynb
+++ b/notebooks/01_google_data_parser.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe3e778a",
+   "id": "ad527a1d",
    "metadata": {},
    "source": [
     "## Data format description\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "903412d0",
    "metadata": {
     "scrolled": true
@@ -134,18 +134,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['2023']\n",
       "Reading file ./data/google_trips/gordan_2023_FEBRUARY.json for user 'gordan' ...\n",
       "There is 372 trips found in total!\n",
+      "['2023']\n",
       "Reading file ./data/google_trips/gordan_2023_JANUARY.json for user 'gordan' ...\n",
       "There is 368 trips found in total!\n",
+      "['2023']\n",
       "Reading file ./data/google_trips/max_2023_FEBRUARY.json for user 'max' ...\n",
       "There is 380 trips found in total!\n",
+      "['2023']\n",
       "Reading file ./data/google_trips/max_2023_JANUARY.json for user 'max' ...\n",
       "There is 443 trips found in total!\n",
+      "['2023']\n",
       "Reading file ./data/google_trips/max_2023_MARCH.json for user 'max' ...\n",
       "There is 380 trips found in total!\n",
+      "['2023']\n",
       "Reading file ./data/google_trips/zan_2023_FEBRUARY.json for user 'zan' ...\n",
       "There is 98 trips found in total!\n",
+      "['2023']\n",
       "Reading file ./data/google_trips/zan_2023_JANUARY.json for user 'zan' ...\n",
       "There is 241 trips found in total!\n"
      ]
@@ -159,7 +166,7 @@
     "for file in all_trip_files:\n",
     "    user_name = file.split(\"_\")[0]\n",
     "    full_file_path = f\"{data_path}{file}\" \n",
-    "    file_name_pretty = \"_\".join(file.split(\"_\")[1:])\n",
+    "    file_name_pretty = \"_\".join(file.split(\"_\")[1::-1]).lower()\n",
     "    print(f\"Reading file {full_file_path} for user '{user_name}' ...\")\n",
     "    \n",
     "    month_file_data = parse_trip_file(full_file_path)\n",
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "41ded40a",
    "metadata": {},
    "outputs": [
@@ -203,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "471596b3",
+   "id": "ffa04d3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa47e57",
+   "id": "f02186a1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -233,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db247679",
+   "id": "025c2e50",
    "metadata": {},
    "outputs": [],
    "source": []
