--- a/notebooks/02_feature_eng.ipynb
+++ b/notebooks/02_feature_eng.ipynb
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "data[\"gordan\"]['2023_FEBRUARY.json'][\"features\"][\"all_end_locations\"][:5]"
+    "data[\"gordan\"]['2023_february'][\"features\"][\"all_end_locations\"][:5]"
    ]
   },
   {
