--- a/notebooks/01_google_data_parser.ipynb
+++ b/notebooks/01_google_data_parser.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad527a1d",
+   "id": "135a80c3",
    "metadata": {},
    "source": [
     "## Data format description\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "903412d0",
    "metadata": {
     "scrolled": true
@@ -134,25 +134,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2023']\n",
       "Reading file ./data/google_trips/gordan_2023_FEBRUARY.json for user 'gordan' ...\n",
       "There is 372 trips found in total!\n",
-      "['2023']\n",
       "Reading file ./data/google_trips/gordan_2023_JANUARY.json for user 'gordan' ...\n",
       "There is 368 trips found in total!\n",
-      "['2023']\n",
       "Reading file ./data/google_trips/max_2023_FEBRUARY.json for user 'max' ...\n",
       "There is 380 trips found in total!\n",
-      "['2023']\n",
       "Reading file ./data/google_trips/max_2023_JANUARY.json for user 'max' ...\n",
       "There is 443 trips found in total!\n",
-      "['2023']\n",
       "Reading file ./data/google_trips/max_2023_MARCH.json for user 'max' ...\n",
       "There is 380 trips found in total!\n",
-      "['2023']\n",
       "Reading file ./data/google_trips/zan_2023_FEBRUARY.json for user 'zan' ...\n",
       "There is 98 trips found in total!\n",
-      "['2023']\n",
       "Reading file ./data/google_trips/zan_2023_JANUARY.json for user 'zan' ...\n",
       "There is 241 trips found in total!\n"
      ]
@@ -166,7 +159,7 @@
     "for file in all_trip_files:\n",
     "    user_name = file.split(\"_\")[0]\n",
     "    full_file_path = f\"{data_path}{file}\" \n",
-    "    file_name_pretty = \"_\".join(file.split(\"_\")[1::-1]).lower()\n",
+    "    file_name_pretty = \"_\".join(file.split(\"_\")[1:]).lower().replace(\".json\", \"\")\n",
     "    print(f\"Reading file {full_file_path} for user '{user_name}' ...\")\n",
     "    \n",
     "    month_file_data = parse_trip_file(full_file_path)\n",
@@ -186,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "41ded40a",
    "metadata": {},
    "outputs": [
@@ -210,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ffa04d3f",
+   "id": "776f3e95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f02186a1",
+   "id": "f78a33f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -240,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "025c2e50",
+   "id": "607b9c1c",
    "metadata": {},
    "outputs": [],
    "source": []
